# highzer

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  clip.py  default.nix  docker-compose.yml  ffmpeg.py  fpeg.py  pyproject.toml  requirements.txt  shell.nix  twitch.py  utils.py  yt.py
.github/workflows/: container.yaml  docker.yaml  image.yaml  tests.yaml
.vim/: coc-settings.json
highzer/: api.py  audio.py  chat.py  clip.py  config.py  fpeg.py  highzer.py  kubernetes.py  manifests.py  movie.py  twitch.py  upload.py  utils.py  yt.py  ytapi.py  ytbrowser.py
highzer/old/: fpeg.py
tests/: test_highzer.py
