[tool.poetry]
name = "highzer"
version = "0.1.0"
description = "Twitch Stream Analyzer"
authors = ["Felix Breuer <f.breuer94@gmail.com>"]

[tool.poetry.scripts]
highzer = "highzer.highzer:cli"

[tool.poetry.dependencies]
#opplast = {git = "https://github.com/breuerfelix/opplast", rev = "main"}
opplast = "1.0.8"

python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"
numpy = "^1.19.1"
python-ffmpeg = "^1.0.11"
schedule = "^0.6.0"
#scipy = "^1.7.0"
moviepy = "^1.0.3"
path = "^15.1.2"

# pinned versions

# nix module is already built
cryptography = "3.4.*"

# 4.x yields geckodriver error code 64
selenium = "3.*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
