[tool.poetry]
name = "highzer"
version = "0.1.0"
description = "Twitch Stream Analyzer"
authors = ["Felix Breuer <fbreuer@pm.me>"]

[tool.poetry.scripts]
highzer = "highzer.highzer:cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^8.0.0"
numpy = "^1.19.1"
python-ffmpeg = "^2.0.0"
schedule = "^1.0.0"
#scipy = "^1.7.0"

moviepy = "^1.0.3"
path = "^16.0.0"

# nix module is already built
cryptography = "3.4.*"
PyYAML = "^6.0"
python-slugify = "^8.0.0"
kubernetes = "^29.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
